--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "5.1.1",
     "@testing-library/react": "9.4.1",
     "@testing-library/user-event": "10.0.0",
+    "node-cron": "^2.0.3",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "react-scripts": "3.4.0"
@@ -39,14 +40,14 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.7.4",
-    "typescript": "~4.0.3",
-    "postcss-preset-env": "^6.7.0",
     "cross-env": "^7.0.0",
     "cssnano": "^4.1.10",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
+    "postcss-preset-env": "^6.7.0",
     "purgecss": "^2.0.6",
     "tailwindcss": "^1.8.7",
-    "npm-run-all": "^4.1.5"
+    "typescript": "~4.0.3"
   },
   "keywords": [
     "tailwind",
